
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EOF ;

 int _ (char*) ;
 int collapse_redundant_completers () ;
 int debug ;
 int errno ;
 int exit (int ) ;
 int fail (int ,char*,int ) ;
 int generate_disassembler () ;
 int getopt_long (int,char**,char*,int ,int ) ;
 int ia64_opcodes_a ;
 int ia64_opcodes_b ;
 int ia64_opcodes_d ;
 int ia64_opcodes_f ;
 int ia64_opcodes_i ;
 int ia64_opcodes_m ;
 int ia64_opcodes_x ;
 int load_dependencies () ;
 int load_insn_classes () ;
 int long_options ;
 char* optarg ;
 int optind ;
 int print_completer_table () ;
 int print_dependency_table () ;
 int print_main_table () ;
 int print_string_table () ;
 int print_version () ;
 int printf (char*) ;
 char* program_name ;
 int shrink (int ) ;
 int stderr ;
 int stdout ;
 int strerror (int ) ;
 int usage (int ,int) ;
 int xmalloc_set_program_name (char*) ;

int
main (int argc, char **argv)
{
  extern int chdir (char *);
  char *srcdir = ((void*)0);
  int c;

  program_name = *argv;
  xmalloc_set_program_name (program_name);

  while ((c = getopt_long (argc, argv, "vVdh", long_options, 0)) != EOF)
    switch (c)
      {
      case 128:
 srcdir = optarg;
 break;
      case 'V':
      case 'v':
 print_version ();
 break;
      case 'd':
 debug = 1;
 break;
      case 'h':
      case '?':
 usage (stderr, 0);
      default:
      case 0:
 break;
      }

  if (optind != argc)
    usage (stdout, 1);

  if (srcdir != ((void*)0))
    if (chdir (srcdir) != 0)
      fail (_("unable to change directory to \"%s\", errno = %s\n"),
     srcdir, strerror (errno));

  load_insn_classes ();
  load_dependencies ();

  shrink (ia64_opcodes_a);
  shrink (ia64_opcodes_b);
  shrink (ia64_opcodes_f);
  shrink (ia64_opcodes_i);
  shrink (ia64_opcodes_m);
  shrink (ia64_opcodes_x);
  shrink (ia64_opcodes_d);

  collapse_redundant_completers ();

  printf ("/* This file is automatically generated by ia64-gen.  Do not edit!  */\n");
  print_string_table ();
  print_dependency_table ();
  print_completer_table ();
  print_main_table ();

  generate_disassembler ();

  exit (0);
}
